# BashkirEnergoChatBot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.processor  README.md  docker-compose.yml  pyproject.toml  reranker.py
processing/: Dockerfile  pyproject.toml
processing/scripts/: ai_chunking.py  change_embedder_qdrant.py  chunk_embedding_qdrant.py  parse_docs_ocr.py  rag_test_api.py  run_full_pipeline.py  semantic_chunking.py
rag-service/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
rag-service/app/: main.py  reranker.py
scripts/: ai_chunking.py  generat_answer.py  parse_docs_ocr.py  run_full_pipeline.py  semantic_chunking.py
